--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
 title: "Oodles Blockchain Blog"
 description: "Stay updated with Blockchain, DeFi, NFTs & more."
-theme: minima
+remote_theme: "mmistakes/minimal-mistakes"
+plugins:
+  - jekyll-remote-theme
+
